@@ -14,6 +14,9 @@ GNU sed NEWS                                    -*- outline -*-
   sed no longer accesses invalid memory (heap overflow) when given invalid
   backreferences in 's' command [bug#32082, present at least since sed-4.0.6].
 
+  sed no longer adds extraneous NUL when given s/$//n command.
+  [related to bug#32271, present since sed-4.0.7]
+
 
 * Noteworthy changes in release 4.5 (2018-03-31) [stable]
 
